# cardboard-firmware

cardboard-lib/: Cargo.toml  README.md
cardboard-lib/src/: command.rs  context.rs  device.rs  embassy.rs  error.rs  hid.rs  input.rs  lib.rs  profile.rs  serial.rs  serialize.rs  state.rs  storage.rs  stream.rs  tasks.rs  test.rs  time.rs
firmware/: Cargo.toml  README.md  memory.x  rust_toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: lib.rs
firmware/src/ck1_30/: main.rs
firmware/src/rp2040/: bootloader.rs  flash.rs  hid.rs  mod.rs  usb.rs
