[package]
name = "cardboard-lib"
version = "0.1.0"
edition = "2024"

[features]
embassy = ["embassy-time", "embassy-futures", "embassy-usb", "embassy-sync", "embassy-rp"]
default = ["embassy"]
embassy-sync = ["dep:embassy-sync"]

[dependencies]
async-trait = "0.1.88"
defmt = { version = "1.0.1", features = ["alloc"] }
embassy-time = { version = "0.4.0", optional = true }
embassy-futures = { version = "0.1.0", optional = true }
embassy-usb = { version = "0.4.0", optional = true }
embassy-sync = { version = "0.6.1", features = ["defmt"], optional = true }
embassy-rp = { version = "0.4.0", features = ["defmt", "rp2040"], optional = true }
uuid = { version = "1.10.0", default-features = false, features = ["serde"] }
critical-section = "1.2"
bitflags = "2.9.1"
fugit = { version = "0.3.7", features = ["defmt"] }
bitset-core = { version = "0.1.1", default-features = false }
heapless = { version = "0.9.1", features = ["alloc", "defmt", "nightly", "serde"] }
num_enum = { version = "0.7.5", default-features = false }

[dev-dependencies]
defmt-test = "0.4.0"
tokio = { version = "1.44.2", features = ["macros", "rt"] }
