[package]
edition = "2021"
name = "cardboard"
version = "0.1.0"

[[bin]]
name = "ck1_30"
path = "src/ck1_30/main.rs"

[dependencies]
cardboard-lib = { path = "../cardboard-lib" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

panic-halt = "1.0.0"

embedded-alloc = "0.6.0"
usbd-human-interface-device = "0.5.0"
fugit = "0.3.7"
littlefs2 = { version = "0.4.0", features = ["c-stubs"] }
embedded-time = "0.12.1"
generic-array = "0.14"
bitflags = "2.6.0"
serde = { version = "1.0.210", default-features = false, features = ["alloc"] }
serde-json-core = { version = "0.6.0", features = ["defmt"] }
uuid = { version = "1.10.0", default-features = false, features = ["serde", "v5"] }
typenum = "1.17.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4.0", features = ["defmt", "max-interface-count-5"] }
embassy-futures = { version = "0.1.0" }
async-trait = "0.1.83"
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-time-driver = "0.2.0"
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
static_cell = "2.1"

[features]
reboot-on-panic = []
ck1-30 = []
cfp-2 = []

# necessary for getting delog (littlefs2 dependency) to build
[patch.crates-io]
delog = { git = "https://github.com/LechevSpace/delog.git", rev = "869167f7ff0630518c86f30afd215fee124d19c1" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.debug-probe]
inherits = "dev"
opt-level = 0

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
